--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -92,7 +92,16 @@
                                         <p>这次的更新跨足了美国、新加坡、加拿大、日本、欧洲、韩国、香港等多个地区，节点覆盖广泛，最高速度可达18.3 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p>
                     <p>&nbsp;</p>
 
-                                        <h3>高速机场推荐1【<a href="javascript:;" class="js_to" data-url="https://goudan.site/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="color:red;">西游云</a>】</h3>
+                                        <h3>高速机场推荐1【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud.net/#/register?code=" data-type="FCCloud" data-code="VImoLSwr" rel="nofollow noopener" style="color:red;">FCCloud</a>】</h3>
+                    <p>新用户 8 折优惠 8 折优惠券代码: <font color="#ff0000"><b>new</b></font> 下单时在验证优惠券处填写 new 验证即可获得优惠 不限套餐/时长 , 每位用户仅可用一次(老用户没用过也可以用） 只要没用过就可以用，没有时间限制，费用低至<font color="#ff0000">0.33元/天</font>,无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+
+<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud.net/#/register?code=" data-type="FCCloud" data-code="VImoLSwr" rel="nofollow noopener"><font color="#ff0000">FCCloud（点击注册）</font></a>】</p>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://invite.spcloud.vip/#/register?code=" data-type="SPCloud" data-code="4AmRJ16y" rel="nofollow noopener" style="color:red;">SPCloud</a>】</h3>
+                    <p>新用户 6 折优惠 6 折优惠券代码: <font color="#ff0000"><b>off30fornew</b></font> 下单时在验证优惠券处填写 off30fornew 验证即可获得优惠 不限套餐/时长 , 每位用户仅可用一次(老用户没用过也可以用） 只要没用过就可以用，没有时间限制，费用低至<font color="#ff0000">0.33元/天</font>,无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+
+<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://invite.spcloud.vip/#/register?code=" data-type="SPCloud" data-code="4AmRJ16y" rel="nofollow noopener"><font color="#ff0000">SPCloud（点击注册）</font></a>】</p>
+
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://goudan.site/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="color:red;">西游云</a>】</h3>
                     <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
@@ -100,15 +109,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://goudan.site/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">西游云（点击注册）</a>】</p>
 
-                    <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud.net/#/register?code=" data-type="FCCloud" data-code="VImoLSwr" rel="nofollow noopener" style="color:red;">FCCloud</a>】</h3>
-                    <p>新用户 8 折优惠 8 折优惠券代码: <font color="#ff0000"><b>new</b></font> 下单时在验证优惠券处填写 new 验证即可获得优惠 不限套餐/时长 , 每位用户仅可用一次(老用户没用过也可以用） 只要没用过就可以用，没有时间限制，费用低至<font color="#ff0000">0.33元/天</font>,无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
-<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud.net/#/register?code=" data-type="FCCloud" data-code="VImoLSwr" rel="nofollow noopener"><font color="#ff0000">FCCloud（点击注册）</font></a>】</p>
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://inv.easyfastcloud.com/#/register?code=" data-type="EFCloud" data-code="wcHPHUo2" rel="nofollow noopener" style="color:red;">EFCloud</a>】</h3>
-                    <p>新用户 8 折优惠 8 折优惠券代码: <font color="#ff0000"><b>new</b></font> 下单时在验证优惠券处填写 new 验证即可获得优惠 不限套餐/时长 , 每位用户仅可用一次(老用户没用过也可以用） 只要没用过就可以用，没有时间限制，费用低至<font color="#ff0000">0.2元/天</font>,无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
-
-<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://inv.easyfastcloud.com/#/register?code=" data-type="EFCloud" data-code="wcHPHUo2" rel="nofollow noopener"><font color="#ff0000">EFCloud（点击注册）</font></a>】</p>
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>
                     <p>&nbsp;</p>
                     <p></p>
                     <h2>订阅链接</h2>
@@ -121,7 +122,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                     <p><strong>sing-box订阅链接</strong></p>
                     <div class="xcblog-singbox-box"></div>
                     <p>&nbsp;</p>
-                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://t2.9999911.xyz/#/register?code=" data-code="6KO4Fpse" rel="nofollow noopener" style="color:#c00;">星辰机场</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
+                    <p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://stkinv.net/#/register?code=" data-code="SV6L7u10" rel="nofollow noopener" style="color:#c00;">斯图卡</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>
                 </div>
             </div>
             <div class="col-md-4 w3l-services">
@@ -130,8 +131,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-28264.htm">北京农大动物医院哪个医生好些（北京农大动物医院最好的医生）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈北京农大动物医院哪个医生好些，以及北京农大动物医院最好的医生对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、月坛宠物医院哪个医生比较好..</p>
+                <h4><a href="/free-nodes/2024-11-7-free-clash-subscribe.htm">11月7日更新19.1M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、新加坡、加拿大、欧洲、韩国、香港等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -140,8 +141,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-7-free-clash.htm">10月7日更新21.1M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、新加坡、香港、韩国、加拿大、欧洲、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-31093.htm">广州卖狗市场（广州卖狗狗批发市场）</a></h4>
+                <p>摘要：       今天给各位分享广州卖狗市场的知识，其中也会对广州卖狗狗批发市场进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、广州宠物市场在哪里?想买只串.</p>
             </div>
         </div>
     </div>
@@ -150,8 +151,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-19-free-v2ray.htm">11月19日更新20.4M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、欧洲、日本、美国、香港等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-24465.htm">宠物粮食品牌都有什么牌子好 宠物粮食品牌都有什么牌子好的</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物粮食品牌都有什么牌子好的问题，于是小编就整理了3个相关介绍宠物粮食品牌都有什么牌子好的解答，让我们一起看看吧。鹦鹉粮食哪个品</p>
             </div>
         </div>
     </div>
@@ -160,8 +161,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-22701.htm">猫三联打几针多少钱一次（猫三联要多少钱第一针）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫三联打几针多少钱一次，以及猫三联要多少钱第一针对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫要打几次疫苗啥价格,猫三联是多少钱?..</p>
+                <h4><a href="/news/article-19953.htm">动物疫苗经营范围有哪些内容要求（动物疫苗经营许可）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗经营范围有哪些内容要求的知识，其中也会对动物疫苗经营许可进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、生物科技有限.</p>
             </div>
         </div>
     </div>
@@ -170,8 +171,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-30138.htm">猫粮制作机器设备厂家有哪些（猫粮制作机器设备厂家有哪些呢）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫粮制作机器设备厂家有哪些，以及猫粮制作机器设备厂家有哪些呢对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、东莞包装机械厂家有哪些?...</p>
+                <h4><a href="/news/article-31572.htm">动物疫苗工艺流程视频讲解（动物疫苗制作流程）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物疫苗工艺流程视频讲解，以及动物疫苗制作流程对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、给狗打狂犬疫苗前后的注意事项...     </p>
             </div>
         </div>
     </div>
@@ -180,8 +181,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-11-free-subscribe-node.htm">10月11日更新21.6M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、新加坡、欧洲、韩国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-4-free-high-speed-nodes.htm">11月4日更新20.8M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、新加坡、韩国、欧洲、日本、加拿大、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -190,8 +191,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-24464.htm">VUE3 之 全局 Mixin 与 自定义属性合并策略 &#8211; 这个系列的教程通俗易懂，适合新手</a></h4>
-                <p>1. 概述 老话说的好：心态决定命运，好心态才能有好的命运。 言归正传，今天我们来聊聊 VUE 中的全局 Mixin 与 自定义属性合并策略。 2. Mixin 的使用 2.1 全局 Mixin &n</p>
+                <h4><a href="/free-nodes/2024-11-9-free-high-speed-nodes.htm">11月9日更新19.9M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、美国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -200,8 +201,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-18-free-node-subscribe.htm">12月18日更新19.2M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、欧洲、韩国、日本、香港等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25475.htm">动物预防接种计划表（动物预防接种实验报告）</a></h4>
+                <p>摘要：       今天给各位分享动物预防接种计划表的知识，其中也会对动物预防接种实验报告进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎样编制猪场防疫计划.</p>
             </div>
         </div>
     </div>
@@ -210,8 +211,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-25-free-ssr-subscribe.htm">12月25日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、香港、加拿大、韩国、日本、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-31571.htm">如何在IDEA 中配置 Maven</a></h4>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Maven 是一个能使我们的java程序开发节省时间和精力，是开发变得相对简单，还能使开发规范化的工具。</p>
             </div>
         </div>
     </div>
@@ -220,8 +221,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-26408.htm">狗狗疫苗自己打可以办狗证吗（狗狗疫苗自己打可以办狗证吗多少钱）</a></h4>
-                <p>摘要：       今天给各位分享狗狗疫苗自己打可以办狗证吗的知识，其中也会对狗狗疫苗自己打可以办狗证吗多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
+                <h4><a href="/free-nodes/2024-12-7-free-node-subscribe.htm">12月7日更新21.8M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、欧洲、日本、新加坡、加拿大、韩国等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -232,7 +233,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
