--- a/date/2024-11/page-2.htm
+++ b/date/2024-11/page-2.htm
@@ -274,76 +274,6 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-28728.htm">国内十大宠物粮食品牌有哪些呢（国内十大宠物粮食品牌有哪些呢图片）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈国内十大宠物粮食品牌有哪些呢，以及国内十大宠物粮食品牌有哪些呢图片对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫粮品牌十大排行榜是..</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-28-clash-windows.htm">11月28日更新19M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、日本、新加坡、美国、加拿大、韩国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-26408.htm">狗狗疫苗自己打可以办狗证吗（狗狗疫苗自己打可以办狗证吗多少钱）</a></h4>
-                <p>摘要：       今天给各位分享狗狗疫苗自己打可以办狗证吗的知识，其中也会对狗狗疫苗自己打可以办狗证吗多少钱进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-26-clash-node.htm">11月26日更新18.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、美国、日本、新加坡、香港、欧洲等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-36335.htm">宠物粮食加工厂挣钱吗知乎视频下载（宠物粮食加工厂怎么起步）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮食加工厂挣钱吗知乎视频下载，以及宠物粮食加工厂怎么起步对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、拍农村短视频如何赚钱,竟能..</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-14-free-node-subscribe-links.htm">10月14日更新18.2M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、香港、欧洲、美国、加拿大、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-20-shadowrocket-node.htm">10月20日更新23M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、新加坡、香港、韩国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-12-30-free-high-speed-nodes.htm">12月30日更新21.1M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
                 <p>这一次的节点更新覆盖了香港、新加坡、欧洲、加拿大、韩国、日本、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
@@ -354,8 +284,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-23-free-ssr-node.htm">10月23日更新21.8M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、香港、加拿大、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-30-free-subscribe-node.htm">10月30日更新20.5M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、美国、韩国、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -364,8 +294,78 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-31-free-shadowrocket-node.htm">10月31日更新21.9M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、日本、韩国、美国、新加坡等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-9-free-high-speed-nodes.htm">11月9日更新19.9M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、美国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-35376.htm">厦门市宠物领养中心地址（厦门领养宠物猫中心）</a></h4>
+                <p>摘要：       今天给各位分享厦门市宠物领养中心地址的知识，其中也会对厦门领养宠物猫中心进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、厦门宠物猫在哪买..</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-1-3-free-clash-subscribe.htm">1月3日更新22.4M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、新加坡、香港、欧洲、加拿大、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-35377.htm">义乌领养宠物的地方 义乌领养宠物的地方在哪里</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于义乌领养宠物的地方的问题，于是小编就整理了1个相关介绍义乌领养宠物的地方的解答，让我们一起看看吧。陈江河 为什么 收养 邱岩？陈</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-30616.htm">猫咪3针疫苗多久能打完啊图片（猫咪三针疫苗打多久）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈猫咪3针疫苗多久能打完啊图片，以及猫咪三针疫苗打多久对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、新手养猫最全猫咪养护指南...    </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-10-19-free-ssr-node.htm">10月19日更新18.3M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、新加坡、日本、加拿大、香港、韩国、美国等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-27337.htm">领养宠物在哪里领养（领养宠物狗的地方在哪里）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈领养宠物在哪里领养，以及领养宠物狗的地方在哪里对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里有领养狗狗的?2、...        </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-12-25-free-ssr-subscribe.htm">12月25日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、美国、香港、加拿大、韩国、日本、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -376,7 +376,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
